<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InfAcel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            app:srcCompat="@drawable/banneracerca" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/agencia"

                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV1"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:text="dato1"

                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="2"
                    android:text="@string/altitud"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="dato2"

                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear2"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/departamento"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/estado"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/fechainstalacion"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/geologia"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/idestacion"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/latitud"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/longitud"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/muninipio"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/nombre"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tipodescarga"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tipoestacion"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/topografia"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TV14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="dato3"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/volver"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/volver" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>